# zlgxdemo

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.json
app/src/main/cpp/: CMakeLists.txt  PatchUtils.cpp  bspatch.c
app/src/main/cpp/bzip/: bzip2.c  bzip2recover.c  dlltest.c  mk251.c  spewG.c
app/src/main/java/com/boyaa/zlgx/demo/: Application.java  MainActivity.java  PatchUtils.java  SecondActivity.java  ThirdActivity.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_third.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
